--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 		"@sveltejs/vite-plugin-svelte": "^3.1.0",
 		"@vite-pwa/assets-generator": "^0.2.4",
 		"@vite-pwa/sveltekit": "^0.4.0",
-		"bits-ui": "^0.21.4",
+		"bits-ui": "^0.21.5",
 		"chart.js": "^4.4.2",
 		"clsx": "^2.1.1",
 		"fastest-levenshtein": "^1.0.16",
@@ -33,7 +33,7 @@
 		"prettier-plugin-tailwindcss": "^0.5.14",
 		"sharp": "^0.33.3",
 		"sharp-ico": "^0.1.5",
-		"svelte": "^4.2.15",
+		"svelte": "5.0.0-next.115",
 		"svelte-check": "^3.7.0",
 		"svelte-intersection-observer": "^1.0.0",
 		"svelte-persisted-store": "^0.9.2",
